--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
-/* * {
-  font-family: sans-serif;
-  background-color: #000;
-  color: #fff;
-} */
+.tdl-button {
+  padding: 0;
+  border: none;
+  background: none;
+}
