--- a/src/styles.css
+++ b/src/styles.css
@@ -8,9 +8,13 @@ body {
   color: #fff;
 }
 
-.task-ctrl, .task-ctrl:focus, .task-ctrl::placeholder {
+.task-ctrl, .task-ctrl:focus {
   background-color: #333;
   color: #fff;
+}
+
+.task-ctrl::placeholder {
+  color: #ccc;
   opacity: 1;
 }
 
